--- a/intermission.html
+++ b/intermission.html
@@ -54,7 +54,7 @@
 <div class="wrap">
   <header>
     <div class="left">
-      <div class="pill"><strong>IFWL Stream Racer</strong></div>
+      <div class="pill"><strong>IFWL Stream Racer</strong> <span class="mono">vFix-01</span></div>
       <div class="pill">Phase: <strong id="phaseText">—</strong></div>
       <div class="pill">Time: <strong id="timeText">—</strong></div>
     </div>
