--- a/steward.html
+++ b/steward.html
@@ -420,6 +420,18 @@
       return Math.min(5, Math.max(1, isNaN(n) ? 1 : n));
     }
 
+    // --- NEW: reverse mapping for U (User Input) ---
+    // UI is 1..5 (minimal..extreme), but stored score should be reversed: stored = 6 - ui
+    function reverseScore(v) {
+      const n = clampScore(v);
+      return 6 - n;
+    }
+    // When loading from DB, convert stored back into the UI scale:
+    function unreverseScore(v) {
+      const n = clampScore(v);
+      return 6 - n;
+    }
+
     function normalizeUrl(u) {
       const s = (u || "").trim();
       if (!s) return "";
@@ -890,7 +902,8 @@
       $("aScore").value = String(clampScore(cause.awareness?.score));
       $("aText").value = cause.awareness?.text || "";
 
-      $("uScore").value = String(clampScore(cause.userInput?.score));
+      // IMPORTANT: show steward-facing U score (unreverse what was stored)
+      $("uScore").value = String(unreverseScore(cause.userInput?.score));
       $("uText").value = cause.userInput?.text || "";
 
       $("sScore").value = String(clampScore(cause.severity?.score));
@@ -920,6 +933,10 @@
         const reviewId = safeKey(currentEmail);
         const ref = db.collection("tickets").doc(selectedTicketId).collection("reviews").doc(reviewId);
 
+        // IMPORTANT: store reversed U score so "extreme" (5) becomes 1 (most punished)
+        const uUi = Number($("uScore").value);
+        const uStored = reverseScore(uUi);
+
         const review = {
           stewardEmail: currentEmail,
           submittedAt: firebase.firestore.Timestamp.fromDate(new Date()),
@@ -927,7 +944,7 @@
           CAUSE: {
             control:      { score: Number($("cScore").value), text: ($("cText").value||"").trim() },
             awareness:    { score: Number($("aScore").value), text: ($("aText").value||"").trim() },
-            userInput:    { score: Number($("uScore").value), text: ($("uText").value||"").trim() },
+            userInput:    { score: uStored,                 text: ($("uText").value||"").trim() },
             severity:     { score: Number($("sScore").value), text: ($("sText").value||"").trim() },
             environment:  { score: Number($("eScore").value), text: ($("eText").value||"").trim() },
           },
