--- a/steward.html
+++ b/steward.html
@@ -197,6 +197,19 @@
       border:0;
     }
 
+    /* NEW: steward discussion UI */
+    .commentBox {
+      border:1px solid #e5e7eb;
+      border-radius:12px;
+      padding:12px;
+      background:#fff;
+    }
+    .commentMeta {
+      font-size:12px;
+      color:#6b7280;
+      margin-top:4px;
+    }
+
     /* Mobile friendliness */
     @media (max-width: 980px) {
       header { flex-direction:column; align-items:stretch; }
@@ -211,6 +224,8 @@
       .sec { padding:12px; }
       .brand { align-items:center; }
       .brand img { width:34px; height:34px; margin-top:0; }
+      #refreshDiscussionBtn { width:100%; }
+      #postDiscussionBtn { width:100%; }
     }
   </style>
 </head>
@@ -311,6 +326,33 @@
 
           <div class="muted" id="statementsHint" style="margin-top:8px;">—</div>
           <div id="statementsList" style="margin-top:8px; display:flex; flex-direction:column; gap:8px;"></div>
+        </div>
+
+        <!-- NEW: Stewards Discussion (anonymous display) -->
+        <div class="sec" id="discussionSec">
+          <div class="row" style="justify-content:space-between;">
+            <h3 style="margin:0;">Stewards Discussion</h3>
+            <button id="refreshDiscussionBtn">Refresh</button>
+          </div>
+
+          <div class="muted" style="margin-top:6px;">
+            Comments are anonymous to stewards (shown as “Stewards comment” + time only).
+          </div>
+
+          <div id="discussionList" style="margin-top:10px; display:flex; flex-direction:column; gap:8px;"></div>
+
+          <div style="margin-top:10px;">
+            <label class="muted">Add a comment</label>
+            <textarea id="discussionInput" placeholder="Type your steward comment…"></textarea>
+          </div>
+
+          <div class="row" style="justify-content:flex-end; margin-top:10px;">
+            <button class="primary" id="postDiscussionBtn">Post Comment</button>
+          </div>
+
+          <div class="muted" style="margin-top:8px;">
+            Writes to <code>/tickets/&lt;ticket&gt;/steward_comments</code>
+          </div>
         </div>
 
         <div class="sec" id="reviewSec">
@@ -653,6 +695,10 @@
     const workloadSubEl = $("workloadSub");
     const welcomeLineEl = $("welcomeLine");
 
+    // NEW: discussion buttons
+    const refreshDiscussionBtn = $("refreshDiscussionBtn");
+    const postDiscussionBtn = $("postDiscussionBtn");
+
     // ---------- NEW: CAUSE "text" fields are now INFO boxes ----------
     // Only read/write .value for real inputs; INFO boxes return "" so stewards can't "submit" guidance text.
     function isFormTextInput(el) {
@@ -676,10 +722,12 @@
     $("logoutBtn").onclick = async () => { await auth.signOut(); window.location.href = "admin.html"; };
     $("refreshTicketsBtn").onclick = () => loadTickets();
     $("refreshStatementsBtn").onclick = () => loadStatements();
+    if (refreshDiscussionBtn) refreshDiscussionBtn.onclick = () => loadDiscussion();
     filterEl.onchange = () => loadTickets();
 
     loadMyReviewBtn.onclick = () => loadMyReview();
     submitReviewBtn.onclick = () => submitMyReview();
+    if (postDiscussionBtn) postDiscussionBtn.onclick = () => postDiscussion();
 
     // ---------- gating ----------
     auth.onAuthStateChanged(async (user) => {
@@ -842,6 +890,10 @@
       $("statementsHint").textContent = "Loading statements…";
       $("statementsList").innerHTML = "";
 
+      // discussion UI reset
+      $("discussionList").innerHTML = `<div class="muted">Loading comments…</div>`;
+      $("discussionInput").value = "";
+
       const ref = db.collection("tickets").doc(ticketId);
       selectedTicketSnap = await ref.get();
       if (!selectedTicketSnap.exists) { toast("Ticket not found"); return; }
@@ -857,6 +909,7 @@
       $("selSub").textContent = `Accused: ${t.accused || "-"} | Event: ${t.event || "-"}`;
 
       await loadStatements();
+      await loadDiscussion();
       await loadMyReview();
     }
 
@@ -910,6 +963,91 @@
       // optional: refresh ticket list so the statement boxes update quickly after new statements
       // (keeps features intact; just updates UI)
       await loadTickets();
+    }
+
+    // ---------- NEW: steward discussion (anonymous display) ----------
+    async function loadDiscussion() {
+      const list = $("discussionList");
+
+      if (!selectedTicketId) {
+        list.innerHTML = `<div class="muted">Select a ticket to view steward comments.</div>`;
+        return;
+      }
+
+      list.innerHTML = `<div class="muted">Loading comments…</div>`;
+
+      try {
+        const col = db.collection("tickets").doc(selectedTicketId).collection("steward_comments");
+        const snap = await col.orderBy("createdAt", "asc").limit(250).get();
+
+        if (snap.empty) {
+          list.innerHTML = `<div class="muted">No steward comments yet.</div>`;
+          return;
+        }
+
+        list.innerHTML = "";
+        snap.forEach(doc => {
+          const d = doc.data() || {};
+          const text = String(d.text || "").trim();
+          if (!text) return;
+
+          const ts = d.createdAt && d.createdAt.toDate ? d.createdAt.toDate() : null;
+          const when = ts ? ts.toLocaleString() : "—";
+
+          const box = document.createElement("div");
+          box.className = "commentBox";
+          box.innerHTML = `
+            <div><b>Stewards comment</b></div>
+            <div class="commentMeta">${escapeHtml(when)}</div>
+          `;
+
+          const body = document.createElement("div");
+          body.style.marginTop = "10px";
+          body.style.whiteSpace = "pre-wrap";
+          body.textContent = text;
+
+          box.appendChild(body);
+          list.appendChild(box);
+        });
+      } catch (e) {
+        console.error("loadDiscussion failed:", e);
+        list.innerHTML = `<div class="muted">Failed to load comments (check console).</div>`;
+      }
+    }
+
+    async function postDiscussion() {
+      if (!selectedTicketId) { toast("Select a ticket first"); return; }
+
+      const input = $("discussionInput");
+      const text = (input.value || "").trim();
+      if (!text) { toast("Type a comment first"); return; }
+
+      postDiscussionBtn.disabled = true;
+      const original = postDiscussionBtn.textContent;
+      postDiscussionBtn.textContent = "Posting…";
+
+      try {
+        const col = db.collection("tickets").doc(selectedTicketId).collection("steward_comments");
+
+        // Store authorKey for audit/moderation (never shown in UI).
+        // If you want “hard anonymity”, remove this field entirely.
+        const authorKey = safeKey(currentEmail);
+
+        await col.add({
+          text,
+          createdAt: firebase.firestore.FieldValue.serverTimestamp(),
+          authorKey
+        });
+
+        input.value = "";
+        toast("Comment posted ✅");
+        await loadDiscussion();
+      } catch (e) {
+        toast("Post failed: " + (e?.message || e));
+      } finally {
+        postDiscussionBtn.textContent = original;
+        postDiscussionBtn.disabled = false;
+      }
     }
 
     // ---------- reviews ----------
