--- a/headsteward.html
+++ b/headsteward.html
@@ -189,6 +189,21 @@
       border:0;
     }
 
+    /* NEW: steward discussion UI (head steward sees emails) */
+    .commentBox {
+      border:1px solid #e5e7eb;
+      border-radius:12px;
+      padding:12px;
+      background:#fff;
+    }
+    .commentMeta {
+      font-size:12px;
+      color:#6b7280;
+      margin-top:4px;
+      line-height:1.2;
+      word-break: break-word;
+    }
+
     @media (max-width: 980px) {
       body { background-attachment:scroll; }
       header { flex-direction:column; align-items:stretch; }
@@ -204,6 +219,8 @@
       .sec { padding:12px; }
       .brand { align-items:center; }
       .brand img { width:34px; height:34px; margin-top:0; }
+      #refreshDiscussionBtn { width:100%; }
+      #postDiscussionBtn { width:100%; }
     }
   </style>
 </head>
@@ -304,6 +321,33 @@
 
           <div class="muted" id="statementsHint" style="margin-top:8px;">—</div>
           <div id="statementsList" style="margin-top:8px; display:flex; flex-direction:column; gap:8px;"></div>
+        </div>
+
+        <!-- NEW: Stewards Discussion (Head Steward can see steward email per comment) -->
+        <div class="sec" id="discussionSec">
+          <div class="row" style="justify-content:space-between;">
+            <h3 style="margin:0;">Stewards Discussion</h3>
+            <button id="refreshDiscussionBtn">Refresh</button>
+          </div>
+
+          <div class="muted" style="margin-top:6px;">
+            Head Steward view: comment author email is shown for oversight.
+          </div>
+
+          <div id="discussionList" style="margin-top:10px; display:flex; flex-direction:column; gap:8px;"></div>
+
+          <div style="margin-top:10px;">
+            <label class="muted">Add a comment</label>
+            <textarea id="discussionInput" placeholder="Type your steward comment…"></textarea>
+          </div>
+
+          <div class="row" style="justify-content:flex-end; margin-top:10px;">
+            <button class="primary" id="postDiscussionBtn">Post Comment</button>
+          </div>
+
+          <div class="muted" style="margin-top:8px;">
+            Writes to <code>/tickets/&lt;ticket&gt;/steward_comments</code>
+          </div>
         </div>
 
         <div class="sec" id="aggSec">
@@ -624,16 +668,22 @@
     const workloadSubEl = $("workloadSub");
     const welcomeLineEl = $("welcomeLine");
 
+    // NEW: discussion UI refs
+    const refreshDiscussionBtn = $("refreshDiscussionBtn");
+    const postDiscussionBtn = $("postDiscussionBtn");
+
     // ---------- navigation ----------
     $("backBtn").onclick = () => window.location.href = "index.html";
     $("logoutBtn").onclick = async () => { await auth.signOut(); window.location.href = "admin.html"; };
     $("refreshTicketsBtn").onclick = () => loadTickets();
     $("refreshStatementsBtn").onclick = () => loadStatements();
     $("refreshAggBtn").onclick = () => refreshAggregate();
+    if (refreshDiscussionBtn) refreshDiscussionBtn.onclick = () => loadDiscussion();
     filterEl.onchange = () => loadTickets();
     loadMyReviewBtn.onclick = () => loadMyReview();
     submitReviewBtn.onclick = () => submitMyReview();
     publishAllBtn.onclick = () => publishAllStatements();
+    if (postDiscussionBtn) postDiscussionBtn.onclick = () => postDiscussion();
 
     function passesFilter(status) {
       const f = filterEl.value;
@@ -727,6 +777,10 @@
       $("statementsHint").textContent = "Loading statements…";
       $("statementsList").innerHTML = "";
 
+      // NEW: reset discussion UI
+      $("discussionList").innerHTML = `<div class="muted">Loading comments…</div>`;
+      $("discussionInput").value = "";
+
       const ref = db.collection("tickets").doc(ticketId);
       selectedTicketSnap = await ref.get();
       if (!selectedTicketSnap.exists) { toast("Ticket not found"); return; }
@@ -742,6 +796,7 @@
       $("selSub").textContent = `Accused: ${t.accused || "-"} | Event: ${t.event || "-"}`;
 
       await loadStatements();
+      await loadDiscussion();
       await loadMyReview();
       await refreshAggregate();
     }
@@ -881,6 +936,93 @@
       if (!resp.ok) {
         const txt = await resp.text();
         throw new Error(`Discord publish failed: ${resp.status} ${resp.statusText} ${txt}`);
+      }
+    }
+
+    // ---------- NEW: steward discussion (head steward sees author email) ----------
+    async function loadDiscussion() {
+      const list = $("discussionList");
+
+      if (!selectedTicketId) {
+        list.innerHTML = `<div class="muted">Select a ticket to view steward comments.</div>`;
+        return;
+      }
+
+      list.innerHTML = `<div class="muted">Loading comments…</div>`;
+
+      try {
+        const col = db.collection("tickets").doc(selectedTicketId).collection("steward_comments");
+        const snap = await col.orderBy("createdAt", "asc").limit(250).get();
+
+        if (snap.empty) {
+          list.innerHTML = `<div class="muted">No steward comments yet.</div>`;
+          return;
+        }
+
+        list.innerHTML = "";
+        snap.forEach(doc => {
+          const d = doc.data() || {};
+          const text = String(d.text || "").trim();
+          if (!text) return;
+
+          const ts = d.createdAt && d.createdAt.toDate ? d.createdAt.toDate() : null;
+          const when = ts ? ts.toLocaleString() : "—";
+
+          // Head steward can see who posted (authorKey or stewardEmail fallback)
+          const author = String(d.authorKey || d.stewardEmail || "unknown").trim();
+
+          const box = document.createElement("div");
+          box.className = "commentBox";
+          box.innerHTML = `
+            <div><b>Stewards comment</b></div>
+            <div class="commentMeta">${escapeHtml(when)}${author ? ` • <b>${escapeHtml(author)}</b>` : ""}</div>
+          `;
+
+          const body = document.createElement("div");
+          body.style.marginTop = "10px";
+          body.style.whiteSpace = "pre-wrap";
+          body.textContent = text;
+
+          box.appendChild(body);
+          list.appendChild(box);
+        });
+      } catch (e) {
+        console.error("loadDiscussion failed:", e);
+        list.innerHTML = `<div class="muted">Failed to load comments (check console).</div>`;
+      }
+    }
+
+    async function postDiscussion() {
+      if (!selectedTicketId) { toast("Select a ticket first"); return; }
+
+      const input = $("discussionInput");
+      const text = (input.value || "").trim();
+      if (!text) { toast("Type a comment first"); return; }
+
+      postDiscussionBtn.disabled = true;
+      const original = postDiscussionBtn.textContent;
+      postDiscussionBtn.textContent = "Posting…";
+
+      try {
+        const col = db.collection("tickets").doc(selectedTicketId).collection("steward_comments");
+
+        // Store authorKey for oversight/audit (head steward view shows this)
+        const authorKey = safeKey(currentEmail);
+
+        await col.add({
+          text,
+          createdAt: firebase.firestore.FieldValue.serverTimestamp(),
+          authorKey
+        });
+
+        input.value = "";
+        toast("Comment posted ✅");
+        await loadDiscussion();
+      } catch (e) {
+        toast("Post failed: " + (e?.message || e));
+      } finally {
+        postDiscussionBtn.textContent = original;
+        postDiscussionBtn.disabled = false;
       }
     }
 
